Converted project into a static library. Renamed libwpd.c to wpd.c to reflect the library change. Fixed up some broken headers.

--- a/configure.ac
+++ b/configure.ac
@@ -1,8 +1,8 @@
 #                                               -*- Autoconf -*-
 # Process this file with autoconf to produce a configure script.
-
 AC_PREREQ([2.63])
 AC_INIT([FULL-PACKAGE-NAME], [VERSION], [BUG-REPORT-ADDRESS])
+AC_CONFIG_MACRO_DIR([m4])
 AM_INIT_AUTOMAKE([-Wall])
 exsvc_src_dir=`(cd $srcdir && pwd)`
 CFLAGS="-I$exsvc_src_dir/include -Wall -Wextra -g -std=c99 -D_GNU_SOURCE"
@@ -12,6 +12,9 @@ AC_CONFIG_HEADERS([config.h])
 # Checks for programs.
 AC_PROG_CC
 
+AC_PROG_LIBTOOL
+AC_SUBST(LIBTOOL_DEPS)
+AC_LTDL_DLLIB
 # Checks for libraries.
 
 # Checks for header files.
